fix the overlap in iOS music view

--- a/src/components/remotecontrol/remotecontrol.css
+++ b/src/components/remotecontrol/remotecontrol.css
@@ -10,6 +10,8 @@
     -webkit-box-direction: normal;
     -webkit-flex-direction: row;
     flex-direction: row;
+    -webkit-flex-shrink: 0;
+    flex-shrink: 0;
 }
 
 .navigationSection {
@@ -51,6 +53,12 @@
     display: flex;
 }
 
+.infoContainer,
+.sliderContainer {
+    -webkit-flex-shrink: 0;
+    flex-shrink: 0;
+}
+
 .nowPlayingInfoContainerMedia {
     text-align: left;
     margin-bottom: 1em;
@@ -75,6 +83,8 @@
     align-items: center;
     -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-flex-shrink: 0;
+    flex-shrink: 0;
 }
 
 .nowPlayingInfoControls,
